# nedicom

./: composer.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
.claude/: settings.local.json
app/Casts/: humandate.php
app/Exceptions/: Handler.php
app/Helpers/: Checkurl.php  CitySet.php  GetIp.php  GetUslugi.php  OpenAI.php  OpenAIDialogue.php  PhoneValid.php  PostDataOpenAI.php  StatisticsHelper.php  TgSend.php  UslugaSet.php
app/Http/: Kernel.php
app/Mail/: OfferEmail.php  OfferMail.php  TestEmail.php
app/Models/: Answer.php  Article.php  Article_comment.php  Bundles_social.php  Conversion.php  Offer.php  Pension.php  Questions.php  Review.php  User.php  Uslugi.php  YandexTracking.php  cities.php  draft.php
app/Policies/: PricePolicy.php
app/Services/: ArticleViewService.php  DataTracker.php
config/: app.php  cors.php  database.php  services.php
database/migrations/: 2014_10_12_000000_create_users_table.php  2023_06_06_115815_uslugi.php  2023_08_22_043506_ipdate_uslugi.php  2023_11_04_121646_uslugi_userid.php  2023_11_28_131700_changequestionuserid.php  2024_02_16_152908_create_reviews_table.php  2024_02_21_061932_file_path.php  2024_03_03_093717_mob_file_path.php  2024_03_15_130948_youtubehref.php  2024_05_13_132019_usl_populae_question.php  2024_08_12_121353_counter.php  (+39 more)
mcp-server/: README.md  app.py  config.py  pyproject.toml  requirements.txt
mcp-server/models/: schemas.py
mcp-server/routers/: direct.py  wordstat.py
mcp-server/services/: yandex_direct.py
public/: robots.txt
routes/: api.php  web.php
(+242 files in other folders)
