[project]
name = "mcp-yandex-direct-server"
version = "0.1.0"
description = "Python MCP-server for Yandex Direct and Wordstat API"
authors = ["GitHub Copilot <noreply@example.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

[project.dependencies]
fastapi = "^0.111.3"
uvicorn = "^0.23.2"
httpx = "^0.25.1"
python-dotenv = "^1.0.0"
pydantic = "^2.8.0"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
